--- a/Fundoo/src/app/components/collaborator-dialog/collaborator-dialog.component.html
+++ b/Fundoo/src/app/components/collaborator-dialog/collaborator-dialog.component.html
@@ -21,7 +21,7 @@
             <img mat-card-avatar src="http://localhost:8080/getImage/{{token}}" />
            
         </button> -->
-        <button mat-mini-fab matTooltip="items.collaborator.email" color="primary">
+        <button mat-mini-fab matTooltip={{collaborator.email}} color="primary">
                 <!-- <img mat-card-avatar src="http://localhost:8080/getImage/{{token}}" /> -->
             <mat-icon>account_circle</mat-icon>
         </button>
