--- a/Fundoo/src/app/components/dashboard/dashboard.component.scss
+++ b/Fundoo/src/app/components/dashboard/dashboard.component.scss
@@ -13,6 +13,11 @@
     z-index: 2;
   }
   
+  // .example-toolbar {
+  //   position: fixed;
+  //   z-index: 2;
+  // }
+
   h1.example-app-name {
     margin-left: 8px;
   }
