--- a/Fundoo/src/app/components/login/login.component.scss
+++ b/Fundoo/src/app/components/login/login.component.scss
@@ -28,7 +28,7 @@
     width: -webkit-fill-available;
  }
 
- ::ng-deep .mat-form-field-wrapper{
+ :host ::ng-deep .mat-form-field-wrapper{
      width: 60%;
  }
 
