--- a/Fundoo/src/app/components/maincard/maincard.component.html
+++ b/Fundoo/src/app/components/maincard/maincard.component.html
@@ -1,52 +1,57 @@
-<div *ngIf="flag==true" (click)="reverseFlag()" fxLayoutAlign="center center" fxFlex="100">
+<div *ngIf="flag==true"  fxLayoutAlign="center center">
+
   <mat-card fxFlex="55" fxFlex.xs='97' class="matcard" fxLayoutAlign="space-between center" >
 
-    <div data-text="Take a note.." class="Border" id="noteTitle" fxLayout="column" contenteditable="true"
-      class="maincard"></div>
+    <div data-text="Take a note.." (click)="reverseFlag()" fxLayout="column" contenteditable="true" class="maincard"></div>
 
-    <div fxLayout="row" fxLayoutAlign="end start" fxFlex.xs="100" fxLayoutGap="40%">
+    <div fxLayout="row" fxLayoutAlign="end start" fxFlex.xs="100" fxLayoutGap="40%" fxLayoutGap.xs="15%">
+
       <mat-icon class="check" matTooltip="New List">check_box</mat-icon>
-
       <mat-icon class="brush" matTooltip="Drawing is not available">brush</mat-icon>
-
       <mat-icon class="insert" matTooltip="New note with image">insert_photo</mat-icon>
+
     </div>
 
   </mat-card>
+
 </div>
 
 
 
 
-<div *ngIf="flag==false" fxLayout="row" fxLayoutAlign="center center" fxFlex="100">
+<div *ngIf="flag==false" fxLayoutAlign="center center">
 
-  <mat-card fxLayout="column" class="matcard" fxFlex="50" fxFlexOffset.xl="20" fxFlex.xs='97'
-    [style.backgroundColor]=color>
+  <mat-card fxLayout="column" class="matcard" fxFlex="50" fxFlexOffset.xl="20" fxFlex.xs='97' [style.backgroundColor]=color>
+   
     <div fxLayout="row" fxLayoutAlign="end start">
-     
-    
-    <div fxFlex="100" fxLayout="column" class="title">
-      <input matInput placeholder="title" [formControl]="noteTitle">
-    </div>
-    <button mat-icon-button color="basic" (click)="pinned()">
 
-      <div class="barpin" *ngIf="flag1==false">
+      <div fxFlex="100" fxLayout="column" class="title">
+        <input matInput placeholder="title" [formControl]="noteTitle">
+      </div>
+
+      <button mat-icon-button color="basic" (click)="pinned()">
+
+        <div class="barpin" *ngIf="flag1==false">
           <img src="../../../assets/pin.svg">
-        <!-- <img src="../../../assets/barpin.svg"> -->
-      </div>
-      <div class="pin" *ngIf="flag1==true">
-        <img src="../../../assets/barpin.svg">
-      </div>
-    </button>
-  </div>
-    <div class="Border" fxLayout="column" class="takenote">
-      <textarea class="textArea" matTextareaAutosize placeholder="Take a note.. " [formControl]="noteContent"
-        class="textArea"></textarea>
+        </div>
+
+        <div class="pin" *ngIf="flag1==true">
+          <img src="../../../assets/barpin.svg">
+        </div>
+
+      </button>
+
     </div>
+
+    <div class="Border" fxLayout="column" class="takenote">
+      <textarea class="textArea" matTextareaAutosize placeholder="Take a note.. " [formControl]="noteContent" class="textArea"></textarea>
+    </div>
+
     <div fxLayout="row" fxLayoutAlign="space-between end">
       <app-icon-list fxFlex="70" (colorchange)="Changes($event)" [card]="card1"></app-icon-list>
       <button class="addnote" mat-button (click)="addNote()">close</button>
     </div>
+    
   </mat-card>
 </div>
 
@@ -58,7 +63,7 @@
 
 
 
-
+<!-- <img src="../../../assets/barpin.svg"> -->
 
 
 
