--- a/Fundoo/src/app/components/maincard/maincard.component.scss
+++ b/Fundoo/src/app/components/maincard/maincard.component.scss
@@ -1,15 +1,6 @@
 .matcard{
-   
     margin-top: 20px;
 }
-.Border{
-    border-color: white;
-    border: none;
-    outline: none;
-    user-select: none;
-    
-}
-
 
 [contentEditable=true]:empty:not(:focus):before{
     content:attr(data-text)
@@ -18,6 +9,7 @@
 .maincard{
     width: 60%;
     color: rgb(173, 166, 166);
+    border-color: white;
     border: none;
     outline: none;
     user-select: none;
@@ -27,6 +19,7 @@
 .addnote{
     width: 10px;
 }
+
 .textArea{
     background: transparent;
 }
@@ -38,9 +31,7 @@
     margin-top: 30px;
     padding: 12px
 }
-.Border :focus{
-    outline: white;
-}
+
 element.style {
     border-color: white;
 
@@ -79,3 +70,18 @@ element.style {
     outline: none;
     user-select: none;
 }
+
+
+
+
+// .Border :focus{
+//     outline: white;
+// }
+
+// .Border{
+//     border-color: white;
+//     border: none;
+//     outline: none;
+//     user-select: none;
+    
+// }
