--- a/Fundoo/src/app/components/register/register.component.html
+++ b/Fundoo/src/app/components/register/register.component.html
@@ -5,39 +5,42 @@
         <div fxLayoutAlign="center center">
             <h2>FUNDOO</h2>
         </div>
-        
       </mat-card-title>
       <mat-card-subtitle class = "create" fxLayoutAlign="center center">
         <h3>Create a new account</h3>
       </mat-card-subtitle>
       </mat-card-header>
-      <form class="inputForm" fxLayout="column">
+      <form [formGroup] = "registerForm" (ngSubmit) = "onSubmit()" class="inputForm" fxLayout="column">
         <div  fxLayoutGap='6%' fxLayoutGap.xs='3%' fxLayout="row" fxLayoutAlign="center center">
           <mat-form-field appearance="outline" fxFlex='47' fxFlex.xs="42">
             <mat-label>FirstName</mat-label>
-            <input matInput placeholder="" [formControl]="firstName" required>
-            <mat-error *ngIf="firstName.invalid">{{getErrorMessageOfFirstName()}}</mat-error>
+            <input matInput placeholder="" formControlName="firstName" autocomplete = "off" [(ngModel)] = "user.firstName" required>
+            <mat-error *ngIf="!registerForm.controls['firstName'].valid">{{getErrorMessage('firstName','First Name')}}</mat-error> 
+            <!-- <mat-error *ngIf="firstName.invalid">{{getErrorMessageOfFirstName()}}</mat-error> -->
           </mat-form-field>
   
           <mat-form-field appearance="outline" fxFlex='47'  fxFlex.xs="42">
             <mat-label>LastName</mat-label>
-            <input matInput placeholder=""  [formControl]="lastName" required>
-            <mat-error *ngIf="lastName.invalid">{{getErrorMessageOfLastName()}}</mat-error>
+            <input matInput placeholder=""  formControlName="lastName" autocomplete = "off" [(ngModel)] = "user.lastName" required>
+            <mat-error *ngIf="!registerForm.controls['lastName'].valid">{{getErrorMessage('lastName','Last Name')}}</mat-error>
+            <!-- <mat-error *ngIf="lastName.invalid">{{getErrorMessageOfLastName()}}</mat-error> -->
           </mat-form-field>
   
         </div>
         <div fxLayoutGap='6%' fxLayoutGap.xs='2%'  fxLayoutAlign="center center" fxLayout.xs="column">
           <mat-form-field class="email" appearance="outline" fxFlex='47'>
             <mat-label>Email Address</mat-label>
-            <input matInput placeholder="" [formControl]="email" required>
-            <mat-error *ngIf="email.invalid">{{getErrorMessageOfEmail()}}</mat-error>
+            <input matInput placeholder="" formControlName="email" autocomplete = "off" [(ngModel)] = "user.email" required>
+            <mat-error *ngIf="!registerForm.controls['email'].valid">{{getErrorMessage('email','Email')}}</mat-error>
+            <!-- <mat-error *ngIf="email.invalid">{{getErrorMessageOfEmail()}}</mat-error> -->
             <mat-icon matSuffix>email</mat-icon>
           </mat-form-field>
   
           <mat-form-field class="mobile" appearance="outline" fxFlex='47'>
             <mat-label>Mobile Number</mat-label>
-            <input matInput placeholder="" [formControl]="mobileNumber" required>
-            <mat-error *ngIf="mobileNumber.invalid">{{getErrorMessageOfMobileNumber()}}</mat-error>
+            <input matInput placeholder="" formControlName="mobileNumber" autocomplete = "off" [(ngModel)] = "user.mobileNumber" required>
+            <mat-error *ngIf="registerForm.controls['mobileNumber'].valid">{{getErrorMessage('mobileNumber','Mobile Number')</mat-error>
+            <!-- <mat-error *ngIf="mobileNumber.invalid">{{getErrorMessageOfMobileNumber()}}</mat-error> -->
             <mat-icon matSuffix>settings_cell</mat-icon>
           </mat-form-field>
   
@@ -45,19 +48,23 @@
         <div  fxLayoutGap='6%' fxLayoutGap.xs='3%' fxLayoutAlign="center center">
           <mat-form-field appearance="outline" fxFlex='47'  fxFlex.xs="42">
             <mat-label>Password</mat-label>
-            <input matInput placeholder="" [formControl]="password" [type]="hide ? 'password' : 'text'" required>
-            <mat-error *ngIf="password.invalid">{{getErrorMessagePassword()}}</mat-error>
+            <input matInput placeholder="" formControlName="password" autocomplete = "off" [type]="hide ? 'password' : 'text'" required>
+            <mat-error>{{getErrorMessage('password','Password')}}</mat-error>
+            <!-- <mat-error *ngIf="password.invalid">{{getErrorMessagePassword()}}</mat-error> -->
             <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </mat-form-field>
           <mat-form-field appearance="outline" fxFlex='47'  fxFlex.xs="42">
             <mat-label>Confirm Password</mat-label>
-            <input matInput placeholder="" [formControl]="confirmPassword" [type]="hide1 ? 'password' : 'text'" required>
-            <mat-error *ngIf="confirmPassword.invalid">{{getErrorMessageOfConfirmPassword()}}</mat-error>
+            <input matInput placeholder="" formControlName="confirmPassword" autocomplete = "off" [type]="hide1 ? 'password' : 'text'" required>
+            <mat-error>{{getErrorMessage('confirmPassword','Confirm Password')}}</mat-error>
+            <!-- <mat-error *ngIf="confirmPassword.invalid">{{getErrorMessageOfConfirmPassword()}}</mat-error> -->
             <mat-icon matSuffix (click)="hide1 = !hide1">{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
           </mat-form-field>
         </div>
         <div fxLayoutAlign="center center">
-          <button mat-raised-button color="primary" (click)="register()" >Submit</button>
+          <button mat-raised-button color="primary" type = "submit" [disabled]="!registerForm.valid">Submit</button>
+          <!-- [disabled]="!registerForm.valid" -->
+          <!-- [disabled] = "getErrorMessagePassword() != '' || getErrorMessageOfConfirmPassword() != '' || getErrorMessageOfMobileNumber() != '' || getErrorMessageOfEmail() != '' || getErrorMessageOfLastName() != '' || getErrorMessageOfFirstName() != ''" -->
         </div>
         <div class = "signin" fxLayoutAlign="center center">
             <a mat-button routerLink="/login">Sign in</a>
@@ -70,7 +77,7 @@
 
 
 
-
+  <!-- [disabled] = "getErrorMessagePassword() != '' || getErrorMessageOfConfirmPassword() != '' || getErrorMessageOfMobileNumber() != '' || getErrorMessageOfEmail() != '' || getErrorMessageOfLastName() != '' || getErrorMessageOfFirstName() != ''" -->
 
 
 
